# nyash

./: .gitignore  CLAUDE.md  CURRENT_TASK.md  Cargo.toml  Cargo.toml.backup  DELEGATION_DESIGN_SUMMARY.md  P2P_IMPLEMENTATION_ISSUE.md  PHASE6_IMPLEMENTATION.md  PHILOSOPHY.md  README.ja.md  README.md  SOCKETBOX_FIX_SUMMARY.md  SOCKETBOX_ISSUE_REPRODUCTION.md  ai_conference_phase9_jit_design.txt  ai_conference_phase9_jit_results.txt  bench_simple.wat  benchmark_real.sh  build_check.sh  build_error.txt  build_errors.txt  build_errors_only.txt  chatgpt5_build_errors.txt  chatgpt5_build_errors_updated.txt  check_error.sh  check_output.txt  clean_test.wat  debug_ast.nyash  debug_from_test.nyash  debug_socketbox.rs  demo_phase8_4.sh  demo_phase8_5.sh  dump.txt  e2e_filebox_test_error.txt  e2e_test_error.txt  example.txt  field_access_test.nyash  final_test_output.txt  gemini_consultation.txt  http_server_demo.nyash  http_server_simple.nyash  (+199 more)
.github/ISSUE_TEMPLATE/: gemini_arc_mutex_elimination.md
.github/workflows/: mir-golden-ci.yml  nekocode-pr-analysis.yml  plugins-e2e.yml
.nekocode_sessions/: 0d514b6c.json  cf66b687.json
apps/chip8_nyash/: chip8_emulator.nyash
apps/kilo_nyash/: enhanced_kilo_editor.nyash
apps/tinyproxy_nyash/: proxy_server.nyash
benchmarks/: bench_heavy.nyash  bench_light.nyash  bench_medium.nyash
docs/: CURRENT_TASK.md  DOCUMENTATION_REORGANIZATION_PLAN.md  GETTING_STARTED.md  LANGUAGE_REFERENCE_2025.md  Phase-9.75g-0-BID-FFI-Developer-Guide.md  README.md  REORGANIZATION_REPORT.md  VM_README.md  architecture-redesign-proposal.md  backend-llvm-implementation-guide.md  execution-backends.md  lisp_interpreter_design.md  nyash-toml-v2-spec.md  nyash_core_concepts.md  phase_9_78e_summary.md  plugin-migration-guide-v2.md  plugin-migration-request.md  vm-test-request.md
docs/archive/: 2025-01-gemini-unified-box-factory-design.md  2025-08-06_interpreter_modularization.md  2025-08-07_parser_ast_modularization.md  2025-08-07_scope_revolution.md  2025-08-07_two_stage_parser_success.md  2025-08-08_outbox_methodbox_achievements.md  MAPBOX_HANG_BUG_REPORT.md  README.ja.md  README.md  ai_conference_overload_decision.md  ai_consultation_override_design_question.txt  basic_box_static_consultation.txt  (+18 more)
examples/: app_dice_rpg.nyash  app_statistics.nyash  app_statistics_simple.nyash  calculator_app.nyash  debug_notepad.rs  fractal_mandelbrot.nyash  game_of_life.nyash  game_of_life_canvas.nyash  hello_world.nyash  maze_generator.nyash  maze_generator_simple.nyash  nyash_explorer.rs  nyash_explorer_with_icons.rs  nyash_notepad_jp.rs  particle_explosion.nyash  password_generator.nyash  simple_2048.nyash  simple_calculator.nyash  simple_chat.nyash  simple_math.nyash  simple_notepad.rs  simple_notepad_ascii.rs  simple_notepad_v2.rs  simple_notepad_win.rs  test_egui_basic.nyash  test_icon_extraction.rs  web_canvas_demo.nyash  web_display_demo.nyash
local_tests/: basic_math.nyash  basic_mir.nyash  benchmark_filebox.nyash  benchmark_filebox_simple.nyash  bid_async_design_review.txt  bid_design_consultation.txt  bid_ffi_final_review.txt  box_factory_consultation.txt  debug_socket.nyash  debug_string_concat.nyash  debug_wasm_generation.nyash  demo_phase9_51_fixes.nyash  gemini_consultation_instancebox.txt  hello.nyash  instance_box_integration_consultation.txt  measure_performance.sh  memory_demo.nyash  memory_stress_test.nyash  method_call_integration_consultation.txt  mir_examples.nyash  mir_loop_no_local.nyash  mir_output.txt  mir_static_main_arithmetic.nyash  mir_try_basic.nyash  nyash_box_theory_final_review.txt  perf_comparison.sh  phase6_ref_set_get.nyash  phase6_ref_set_get_correct.nyash  plugin_design_consultation.txt  run_test.sh  sample.nyash  simple_demo.nyash  simple_from_test.nyash  simple_hello.nyash  simple_loop_fix_approach.md  simple_loop_test2.nyash  simple_loop_test3.nyash  simple_perf_test.sh  simple_test.nyash  static_main.nyash  (+148 more)
nyash-rust/: egui_implementation_summary.md  simple_editor.nyash
plugins/: .gitignore
plugins/nyash-filebox-plugin/: Cargo.toml  nyash.toml
plugins/nyash-filebox-plugin/src/: ffi_types.rs  filebox.rs  lib.rs
sessions/: ai_consultation_builtin_box_inheritance_20250810.md  ai_consultation_delegation_syntax_design_20250810.md  ai_consultation_final_delegation_design_20250810.md  ai_consultation_from_keyword_alternatives_20250809.md  ai_consultation_overload_design_20250810.md  ai_consultation_standard_boxes_20250110.md  gemini_egui_api_consultation_20250809.md  gemini_egui_core_independence_solution_20250809.md  gemini_nyamesh_egui_fusion_analysis_20250809.md  gemini_performance_analysis_20250809.md  session_20250809_065726.json  webbox_revolution_20250809.md
src/: ast.rs  benchmarks.rs  box_arithmetic.rs  box_operators.rs  box_trait.rs  box_trait.rs.backup  channel_box.rs  cli.rs  environment.rs  exception_box.rs  finalization.rs  instance.rs  instance.rs.backup  instance_v2.rs  lib.rs  main.rs  message_bus.rs  method_box.rs  operator_traits.rs  parser.rs.backup  runner.rs  scope_tracker.rs  tokenizer.rs  transport_trait.rs  type_box.rs  value.rs  wasm_test.rs
tests/: E2E_TESTS.md  array_state_sharing_test.rs  e2e_plugin_counterbox.rs  e2e_plugin_echo.rs  e2e_plugin_filebox.rs  e2e_plugin_interop.rs  e2e_plugin_net.rs  e2e_plugin_net_additional.rs  e2e_plugin_singleton.rs  e2e_plugin_singleton_shutdown.rs  e2e_plugin_socket.rs  e2e_reserved_name_guard.rs  integration_tests.rs  mir_phase6_lowering_ref_ops.rs  mir_phase6_vm_ref_ops.rs  mir_phase7_async_ops.rs  mir_phase8_5_hierarchical_25_instructions.rs  plugin_contract_net_ids.rs  socket_box_edge_cases.nyash  socket_box_functionality.nyash  socket_box_state_persistence.nyash  vm_e2e.rs  wasm_poc1_basic_operations.rs  wasm_poc2_box_operations.rs  wasm_string_constants.rs
tools/: ci_check_golden.sh  compare_mir.sh  run_vm_stats.sh  snapshot_mir.sh  vm_stats_diff.sh
wasm_demo/: hello.wat  index.html  minimal_test.nyash  nyash_wasm_test.html  output.wat  server.py  simple_demo.html  simple_test.nyash
zenn_articles/: 280x_performance_benchmark.md  nyash_introduction.md
(+584 files in other folders)
